<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.vishruu.vsfileexplorer.SHORTCUT_SEARCH"
            android:targetPackage="com.vishruu.vsfileexplorer"
            android:targetClass="com.vishruu.vsfileexplorer.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="vault"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_vault"
        android:shortcutShortLabel="@string/shortcut_vault_short"
        android:shortcutLongLabel="@string/shortcut_vault_long">
        <intent
            android:action="com.vishruu.vsfileexplorer.SHORTCUT_VAULT"
            android:targetPackage="com.vishruu.vsfileexplorer"
            android:targetClass="com.vishruu.vsfileexplorer.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="new_file"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_camera"
        android:shortcutShortLabel="@string/shortcut_camera_short"
        android:shortcutLongLabel="@string/shortcut_camera_long">
        <intent
            android:action="com.vishruu.vsfileexplorer.SHORTCUT_NEW_FILE"
            android:targetPackage="com.vishruu.vsfileexplorer"
            android:targetClass="com.vishruu.vsfileexplorer.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_settings"
        android:shortcutShortLabel="@string/shortcut_settings_short"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="com.vishruu.vsfileexplorer.SHORTCUT_SETTINGS"
            android:targetPackage="com.vishruu.vsfileexplorer"
            android:targetClass="com.vishruu.vsfileexplorer.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>